--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -23,10 +23,11 @@
             <section class="mt-50 mb-50">
                 <div class="container">
                     <div class="col-12">
-                        <div class="shop-product-fillter style-2">
+                        <div class="shop-product-fillter style-2" >
                             <div class="totall-product">
-                                <p> We found <strong class="text-brand">688</strong> items for you!</p>
+                                <p>We found <strong class="text-brand"><%= totalCount %></strong> items for you!</p>
                             </div>
+                            
                             <div class="sort-by-product-area">
                                 <!-- <div class="sort-by-cover mr-10">
                                     <div class="sort-by-product-wrap">
@@ -93,7 +94,7 @@
                                         <ul class="text-center">
                                             <% categories.forEach(category=> { %>
                                                 <li>
-                                                    <a href="#" data-category="<%= category.categoryName %>"
+                                                    <a href="<%= category.categoryName %>" data-category="<%= category.categoryName %>"
                                                         class="categoryLink">
                                                         <%= category.categoryName %><span></span>
                                                     </a>
@@ -164,7 +165,7 @@
                                         aria-labelledby="tab-one">
                                         <div class="row product-grid-4">
                                             <% for(let i=0; i<products.length; i++) { %>
-                                                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                                                <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                                                     <div class="product-cart-wrap mb-30">
                                                         <div class="product-img-action-wrap">
                                                             <div class="product-img product-img-zoom">
@@ -229,13 +230,38 @@
                                                             <div class="rating-result" title="90%">
                                                                 <span><span>90%</span></span>
                                                             </div>
-                                                            <div class="product-price">
-                                                                <span>₹<%= products[i].price %></span>
-                                                                <% if(products[i].price) { %>
-                                                                    <span class="old-price">₹<%= products[i].price %>
-                                                                    </span>
-                                                                    <% } %>
-                                                            </div>
+                                                            <div class="product-card__price d-flex">
+                                                        <% let discountedPrice = products[i].price; %>
+                                                        <% let hasDiscount = false; %>
+                                                    
+                                                        <% if (products[i].offer) { %>
+                                                            <% discountedPrice = discountedPrice - (discountedPrice * (products[i].offer.discount / 100)); %>
+                                                            <% hasDiscount = true; %>
+                                                        <% } else if (products[i].category.offer) { %>
+                                                            <% const categoryOffer = products[i].category.offer; %>
+                                                            <% if (categoryOffer && categoryOffer.discount) { %>
+                                                                <% discountedPrice = discountedPrice - (discountedPrice * (categoryOffer.discount / 100)); %>
+                                                                <% hasDiscount = true; %>
+                                                            <% } %>
+                                                        <% } %>
+                                                    
+                                                        <% if (hasDiscount) { %>
+                                                            <span class="money price">
+                                                                <del>₹<%= products[i].price.toFixed(2) %></del>
+                                                                &nbsp;<span class="discounted-price" style="color: green;">₹<%= discountedPrice.toFixed(2) %></span>
+                                                                &nbsp;<span class="discounted-precentage" style="color: red;">(<%= products[i].offer ? products[i].offer.discount : products[i].category.offer.discount %>  % off)</span>
+                                                            
+                                                                </span>
+                                                        <% } else { %>
+                                                            <span class="money price">₹<%= products[i].price.toFixed(2) %></span>
+                                                        <% } %>
+                                                    </div>
+                                                    <!-- <div class="product-price">
+                                                        <span>₹<%#= products[i].price %> </span>
+                                                        <%# if(products[i].price) { %>
+                                                            <span class="old-price">₹<%#= products[i].price %></span>
+                                                            <%# } %>
+                                                    </div> -->
                                                             <div class="product-action-1 show">
                                                                 <button aria-label="Add To Cart"
                                                                     class="action-btn hover-up"
