--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -73,7 +73,35 @@
                                         </div>
                                         <div class="clearfix product-price-cover">
                                             <div class="product-price primary-color float-left">
-                                                <ins><span class="text-brand">₹<%= products.price %></span></ins>
+                                                <div class="product-card__price d-flex">
+                                                    <% let discountedPrice = products.price; %>
+                                                    <% let hasDiscount = false; %>
+                                                
+                                                    <% if (products.offer) { %>
+                                                        <% discountedPrice = discountedPrice - (discountedPrice * (products.offer.discount / 100)); %>
+                                                        <% hasDiscount = true; %>
+                                                    <% } else if (products.category.offer) { %>
+                                                        <% const categoryOffer = products.category.offer; %>
+                                                        <% if (categoryOffer && categoryOffer.discount) { %>
+                                                            <% discountedPrice = discountedPrice - (discountedPrice * (categoryOffer.discount / 100)); %>
+                                                            <% hasDiscount = true; %>
+                                                        <% } %>
+                                                    <% } %>
+                                                
+                                                    <% if (hasDiscount) { %>
+
+                                                        <span class="money price">
+                                                            <ins><del>₹<%= products.price.toFixed(2) %></del></ins>
+                                                            <ins style="margin-left: 20px;"><span class="discounted-price" style="color: green;">₹<%= discountedPrice.toFixed(2) %></span></ins>
+                                                            <ins style="margin-left: 20px;"><span class="discount-percentage" style="color: red;">(<%= products.offer ? products.offer.discount : products.category.offer.discount %> % off)</span></ins>
+                                                        </span>
+                                                        
+                                                        
+                                                    <% } else { %>
+                                                        <ins><span class="money price">₹<%= products.price.toFixed(2) %></span></ins>
+                                                    <% } %>
+                                                </div>
+                                                <!-- <ins><span class="text-brand">₹<#%= products.price %></span></ins> -->
                                                 <!-- <ins><span class="old-price font-md ml-15">₹<#%= products.firstPrice%>
                                                     </span></ins> -->
                                                 <!-- <span class="save-price  font-md color3 ml-15">25% Off</span> -->
