--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -224,8 +224,10 @@
                                                                                     <%= product.name %>
                                                                                 </a></h5>
                                                                         </td>
+                                                                       
+                                                                        
                                                                         <td class="price" data-title="Price"><span>₹<%=
-                                                                                    product.productId.price %></span>
+                                                                                    product.price %></span>
                                                                         </td>
                                                                         <td class="text-center" data-title="Quantity">
                                                                             <div
