--- a/views/user/orderDeatil.ejs
+++ b/views/user/orderDeatil.ejs
@@ -16,7 +16,7 @@
       }
 
       .order-Details h2 {
-        color: #14ee47;
+        color: #013220;
         /* Dark Green color for the headings */
       }
     </style>
@@ -41,21 +41,24 @@
               <p>
                 <%= selectedItem.orderStatus %>
               </p>
-              <% if (selectedItem.orderStatus !='delivered') { %>
-                <% if (selectedItem.orderStatus !=='cancelled' ) { %>
-                  <button class="btn-warnings cancel-product" data-item-id="<%= selectedItem._id %>">Cancel
-                    Product</button>
-                  <% } else { %>
-                    <button class="btn-dangers cancel-product" disabled>Cancelled</button>
-                    <% } %>
+              <% if (selectedItem.orderStatus === 'delivered') { %>
+                <button class="btn-warnings return-product" data-item-id="<%= selectedItem._id %>">Return Product</button>
+            <% } else if (selectedItem.orderStatus === 'cancelled') { %>
+                <button class="btn-dangers cancel-product" disabled>Cancelled</button>
+            <% } else if (selectedItem.orderStatus === 'awaiting approval') { %>
+                <button class="btn-infos cancel-product" disabled>Awaiting Approval</button>
+                <% } else if (selectedItem.orderStatus === 'returned') { %>
+                  <button class="btn-dangers return-product" disabled>Returned</button>
+            <% } else { %>
+                <button class="btn-warnings cancel-product" data-item-id="<%= selectedItem._id %>">Cancel Product</button>
+            <% } %>
+            
 
-                    <% } else { %>
-                      <button class="btn-warnings return-product" data-item-id="<%= selectedItem._id %>" >Return Product</button>
+            <% } %>
 
 
-              <% } %>
-             
-                    <% } %>
+
+
         </div>
       </div>
       <div class="row order-Details">
@@ -149,32 +152,33 @@
         </div>
         <% } %>
     </div>
-    <!-- Modal for cancellation reason -->
+    <!-- Modal for cancellation and return -->
     <div class="modal fade" id="cancellationModal" tabindex="-1" aria-labelledby="cancellationModalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="cancellationModalLabel">Reason for Cancellation</h5>
+            <h5 class="modal-title" id="cancellationModalLabel">Action Title</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <form id="cancellationForm">
               <div class="mb-3">
-                <label for="cancellationReason" class="form-label">Cancellation Reason</label>
+                <label for="cancellationReason" class="form-label">Reason</label>
                 <textarea id="cancellationReason" class="form-control" rows="4"
-                  placeholder="Enter reason for cancellation"></textarea>
+                  placeholder="Enter reason for action"></textarea>
                 <div id="cancellationReasonError" class="invalid-feedback"></div>
               </div>
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="confirmCancellation">Confirm</button>
+            <button type="button" class="btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn-primary" id="confirmCancellation">Confirm</button>
           </div>
         </div>
       </div>
     </div>
+
 
     <%- include('../layouts/footer.ejs') %>
       <%- include('../layouts/preloader.ejs') %>
@@ -183,19 +187,37 @@
           <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
           <script>
-            document.querySelectorAll('.cancel-product').forEach(button => {
+            document.querySelectorAll('.cancel-product, .return-product').forEach(button => {
               button.addEventListener('click', function () {
                 const itemId = this.getAttribute('data-item-id');
+                const actionType = this.classList.contains('cancel-product') ? 'cancel' : 'return';
+
+                // Update modal content based on action type
+                const modalTitle = actionType === 'cancel' ? 'Cancel Product' : 'Return Product';
+                const confirmButtonText = actionType === 'cancel' ? 'Cancel' : 'Return';
+                const actionReasonPlaceholder = actionType === 'cancel' ? 'Enter reason for cancellation' : 'Enter reason for return';
+
+                document.getElementById('cancellationModalLabel').textContent = modalTitle;
+                document.getElementById('cancellationReason').placeholder = actionReasonPlaceholder;
+                document.getElementById('confirmCancellation').textContent = confirmButtonText;
+
                 $('#cancellationModal').modal('show');
-                $('#confirmCancellation').on('click', function () {
-                  const cancellationReason = document.getElementById('cancellationReason').value;
-                  if (!cancellationReason.trim()) {
-                    document.getElementById('cancellationReason').classList.add('is-invalid');
-                    document.getElementById('cancellationReasonError').textContent = 'Please enter a reason for cancellation.';
+
+                $('#confirmCancellation').off('click').on('click', function () {
+                  const cancellationReason = document.getElementById('cancellationReason').value.trim();
+                  const cancellationReasonError = document.getElementById('cancellationReasonError');
+                  if (!cancellationReason) {
+                    cancellationReasonError.textContent = 'Please enter a reason for ' + (actionType === 'cancel' ? 'cancellation' : 'return');
+                    cancellationReasonError.classList.add('is-invalid');
                     return;
+                  } else {
+                    cancellationReasonError.textContent = '';
+                    cancellationReasonError.classList.remove('is-invalid');
                   }
+
                   const orderId = '<%= order._id %>';
-                  fetch(`/order/cancel/${orderId}/${itemId}`, {
+                  const endpoint = actionType === 'cancel' ? `/order/cancel/${orderId}/${itemId}` : `/order/return/${orderId}/${itemId}`;
+                  fetch(endpoint, {
                     method: 'POST',
                     headers: {
                       'Content-Type': 'application/json',
@@ -209,7 +231,7 @@
                         Swal.fire({
                           icon: 'success',
                           title: 'Success',
-                          text: 'Successfully canceled.',
+                          text: data.message,
                           confirmButtonText: 'OK',
                         }).then(() => {
                           $('#cancellationModal').modal('hide'); // Close the modal
@@ -220,7 +242,7 @@
                         Swal.fire({
                           icon: 'error',
                           title: 'Error',
-                          text: 'Failed to cancel product. Please try again.',
+                          text: `Failed to ${actionType} product. Please try again.`,
                           confirmButtonText: 'OK'
                         });
                       }
@@ -239,66 +261,4 @@
               });
             });
 
-
-
-
-
-
-            document.querySelectorAll('.return-product').forEach(button => {
-              button.addEventListener('click', function () {
-                const itemId = this.getAttribute('data-item-id');
-                $('#cancellationModal').modal('show');
-                $('#confirmCancellation').on('click', function () {
-                  const cancellationReason = document.getElementById('cancellationReason').value;
-                  if (!cancellationReason.trim()) {
-                    document.getElementById('cancellationReason').classList.add('is-invalid');
-                    document.getElementById('cancellationReasonError').textContent = 'Please enter a reason for cancellation.';
-                    return;
-                  }
-                  const orderId = '<%= order._id %>';
-                  fetch(`/order/return/${orderId}/${itemId}`, {
-                    method: 'POST',
-                    headers: {
-                      'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ itemId, orderId, cancellationReason })
-                  })
-                    .then(response => response.json())
-                    .then(data => {
-                      if (data.success) {
-                        // Use SweetAlert for success message
-                        Swal.fire({
-                          icon: 'success',
-                          title: 'Success',
-                          text: 'Successfully return.',
-                          confirmButtonText: 'OK',
-                        }).then(() => {
-                          $('#cancellationModal').modal('hide'); // Close the modal
-                          location.reload(); // Reload the page to reflect the changes
-                        });
-                      } else {
-                        // Use SweetAlert for error message
-                        Swal.fire({
-                          icon: 'error',
-                          title: 'Error',
-                          text: 'Failed to cancel product. Please try again.',
-                          confirmButtonText: 'OK'
-                        });
-                      }
-                    })
-                    .catch(error => {
-                      console.error('Error:', error);
-                      // Use SweetAlert for generic error message
-                      Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred. Please try again.',
-                        confirmButtonText: 'OK'
-                      });
-                    });
-                });
-              });
-            });
-         
-         
-         </script>
+          </script>
