--- a/views/admin/addOffer.ejs
+++ b/views/admin/addOffer.ejs
@@ -21,7 +21,7 @@
                                     <div class="error-message" id="startingDate-error"></div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="endingDate" class="form-label">Expiry Date</label>
+                                    <label for="endingDate" class="form-label">Ending Date</label>
                                     <input type="date" class="form-control" id="endingDate" name="endingDate">
                                     <div class="error-message" id="endingDate-error"></div>
                                 </div>
