--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -129,6 +129,7 @@
                                                                 <form id="couponForm">
 
                                                                     <% coupons.forEach((coupon, index)=> { %>
+                                                                        <% if ( totalPrice  >= coupon.criteriaAmount) { %>
                                                                         <div class="col-12 mb-3">
                                                                             <div class="card"
                                                                                 style="border-radius: 25px;">
@@ -176,6 +177,7 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
+                                                                        <% } %>
                                                                         <% }); %>
                                                                 </form>
 
