--- a/views/user/orderConfirmation.ejs
+++ b/views/user/orderConfirmation.ejs
@@ -96,7 +96,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="/shop" class="btn btn-primary">Continue Shopping</a>
+                        <a href="/shop" class="btn btn-default">Continue Shopping</a>
                     </div>
                 </div>
             </div>
